rnsc/test_data/integration/error/parser/class_body/unknown_directive_in_body.rns
.class MyClass
.super java/lang/Object
.unknown_directive
.class_end
